[project]
name = "apitapviz"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-mermaid>=0.1.3",
    "pyyaml>=6.0.2",
    "typing>=3.10.0.0",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "pytest>=8.3.5",
]

[tool.pytest.ini_options]
pythonpath = [
    "."
]
